--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,4 @@
+../.DS_Store
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
@@ -5,29 +6,12 @@ target/
 !**/src/test/**/target/
 
 ### STS ###
-.apt_generated
 .classpath
-.factorypath
 .project
 .settings
-.springBeans
-.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
